--- a/mobile/android/app/src/main/res/values/strings.xml
+++ b/mobile/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Example2FAApp</string>
+    <string name="app_name">Two Factor Auth App</string>
 </resources>
